--- a/mandelbulber2/formula/ui/amazing_surf_mod3.ui
+++ b/mandelbulber2/formula/ui/amazing_surf_mod3.ui
@@ -586,17 +586,6 @@
        </property>
       </widget>
      </item>
-     <item row="10" column="0">
-      <layout class="QGridLayout" name="gridLayout_16" columnstretch="0">
-       <item row="2" column="0">
-        <widget class="MyCheckBox" name="checkBox_transf_function_enabledSw_false">
-         <property name="text">
-          <string>Enable swap z.x z.y</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </item>
      <item row="7" column="0">
       <widget class="QGroupBox" name="groupBox_8">
        <property name="title">
@@ -741,7 +730,7 @@
         <property name="spacing">
          <number>2</number>
         </property>
-        <item row="0" column="1">
+        <item row="1" column="1">
          <widget class="MySpinBox" name="spinboxInt_transf_start_iterations_Z">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -754,21 +743,21 @@
           </property>
          </widget>
         </item>
-        <item row="0" column="0">
+        <item row="1" column="0">
          <widget class="QLabel" name="label_277">
           <property name="text">
            <string>Start at iteration:</string>
           </property>
          </widget>
         </item>
-        <item row="0" column="2">
+        <item row="1" column="2">
          <widget class="QLabel" name="label_278">
           <property name="text">
            <string>Stop at iteration:</string>
           </property>
          </widget>
         </item>
-        <item row="0" column="3">
+        <item row="1" column="3">
          <widget class="MySpinBox" name="spinboxInt_transf_stop_iterations_Z">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -827,6 +816,228 @@
     </widget>
    </item>
    <item>
+    <widget class="MyGroupBox" name="groupCheck_transf_function_enabledSw_false">
+     <property name="font">
+      <font>
+       <weight>50</weight>
+       <bold>false</bold>
+      </font>
+     </property>
+     <property name="title">
+      <string>Enable sw&amp;ap xy</string>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_19">
+      <property name="leftMargin">
+       <number>2</number>
+      </property>
+      <property name="topMargin">
+       <number>2</number>
+      </property>
+      <property name="rightMargin">
+       <number>2</number>
+      </property>
+      <property name="bottomMargin">
+       <number>2</number>
+      </property>
+      <item>
+       <layout class="QGridLayout" name="gridLayout_24" columnstretch="0,0,0,0">
+        <item row="0" column="1">
+         <widget class="MySpinBox" name="spinboxInt_transf_start_iterations_I">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="maximum">
+           <number>999</number>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0">
+         <widget class="QLabel" name="label_279">
+          <property name="text">
+           <string>Start at iteration:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="2">
+         <widget class="QLabel" name="label_280">
+          <property name="text">
+           <string>Stop at iteration:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="3">
+         <widget class="MySpinBox" name="spinboxInt_transf_stop_iterations_I">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="maximum">
+           <number>999</number>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="MyGroupBox" name="groupCheck_transf_function_enabledJ_false">
+     <property name="font">
+      <font>
+       <weight>50</weight>
+       <bold>false</bold>
+      </font>
+     </property>
+     <property name="title">
+      <string>Ena&amp;ble y neg on even</string>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_20">
+      <property name="leftMargin">
+       <number>2</number>
+      </property>
+      <property name="topMargin">
+       <number>2</number>
+      </property>
+      <property name="rightMargin">
+       <number>2</number>
+      </property>
+      <property name="bottomMargin">
+       <number>2</number>
+      </property>
+      <item>
+       <layout class="QGridLayout" name="gridLayout_26" columnstretch="0,0,0,0">
+        <item row="0" column="0">
+         <widget class="QLabel" name="label_285">
+          <property name="text">
+           <string>Start at iteration:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="2">
+         <widget class="QLabel" name="label_286">
+          <property name="text">
+           <string>Stop at iteration:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="MySpinBox" name="spinboxInt_transf_start_iterations_J">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="maximum">
+           <number>999</number>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="3">
+         <widget class="MySpinBox" name="spinboxInt_transf_stop_iterations_J">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="maximum">
+           <number>999</number>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="MyGroupBox" name="groupCheck_transf_function_enabledK_false">
+     <property name="font">
+      <font>
+       <weight>50</weight>
+       <bold>false</bold>
+      </font>
+     </property>
+     <property name="title">
+      <string>Ena&amp;ble z neg on even</string>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_21">
+      <property name="leftMargin">
+       <number>2</number>
+      </property>
+      <property name="topMargin">
+       <number>2</number>
+      </property>
+      <property name="rightMargin">
+       <number>2</number>
+      </property>
+      <property name="bottomMargin">
+       <number>2</number>
+      </property>
+      <item>
+       <layout class="QGridLayout" name="gridLayout_30" columnstretch="0,0,0,0">
+        <item row="0" column="0">
+         <widget class="QLabel" name="label_287">
+          <property name="text">
+           <string>Start at iteration:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="2">
+         <widget class="QLabel" name="label_288">
+          <property name="text">
+           <string>Stop at iteration:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="MySpinBox" name="spinboxInt_transf_start_iterations_K">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="maximum">
+           <number>999</number>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="3">
+         <widget class="MySpinBox" name="spinboxInt_transf_stop_iterations_K">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="maximum">
+           <number>999</number>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
     <widget class="QGroupBox" name="groupBox_2">
      <property name="title">
       <string>Offset:</string>
@@ -844,6 +1055,53 @@
       <property name="bottomMargin">
        <number>2</number>
       </property>
+      <item>
+       <layout class="QGridLayout" name="gridLayout_76" columnstretch="0,0,0,0">
+        <property name="spacing">
+         <number>2</number>
+        </property>
+        <item row="0" column="0">
+         <widget class="QLabel" name="label_275">
+          <property name="text">
+           <string>Start at iteration:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="2">
+         <widget class="QLabel" name="label_276">
+          <property name="text">
+           <string>Stop at iteration:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="3">
+         <widget class="MySpinBox" name="spinboxInt_transf_stop_iterations_O">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="maximum">
+           <number>999</number>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="MySpinBox" name="spinboxInt_transf_start_iterations_O">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="maximum">
+           <number>999</number>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
       <item>
        <layout class="QGridLayout" name="gridLayout_19" columnstretch="0,0,0,1">
         <property name="spacing">
@@ -985,6 +1243,16 @@
           </property>
           <property name="singleStep">
            <double>0.100000000000000</double>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="1">
+         <widget class="QFrame" name="frame">
+          <property name="frameShape">
+           <enum>QFrame::StyledPanel</enum>
+          </property>
+          <property name="frameShadow">
+           <enum>QFrame::Raised</enum>
           </property>
          </widget>
         </item>
@@ -3260,11 +3528,11 @@ offset:</string>
    <hints>
     <hint type="sourcelabel">
      <x>470</x>
-     <y>962</y>
+     <y>548</y>
     </hint>
     <hint type="destinationlabel">
      <x>470</x>
-     <y>993</y>
+     <y>579</y>
     </hint>
    </hints>
   </connection>
@@ -3276,11 +3544,11 @@ offset:</string>
    <hints>
     <hint type="sourcelabel">
      <x>470</x>
-     <y>962</y>
+     <y>548</y>
     </hint>
     <hint type="destinationlabel">
      <x>470</x>
-     <y>1025</y>
+     <y>611</y>
     </hint>
    </hints>
   </connection>
@@ -3292,11 +3560,11 @@ offset:</string>
    <hints>
     <hint type="sourcelabel">
      <x>470</x>
-     <y>962</y>
+     <y>548</y>
     </hint>
     <hint type="destinationlabel">
      <x>470</x>
-     <y>1057</y>
+     <y>643</y>
     </hint>
    </hints>
   </connection>
@@ -3308,11 +3576,11 @@ offset:</string>
    <hints>
     <hint type="sourcelabel">
      <x>706</x>
-     <y>962</y>
+     <y>548</y>
     </hint>
     <hint type="destinationlabel">
      <x>706</x>
-     <y>993</y>
+     <y>579</y>
     </hint>
    </hints>
   </connection>
@@ -3324,11 +3592,11 @@ offset:</string>
    <hints>
     <hint type="sourcelabel">
      <x>706</x>
-     <y>962</y>
+     <y>548</y>
     </hint>
     <hint type="destinationlabel">
      <x>706</x>
-     <y>1025</y>
+     <y>611</y>
     </hint>
    </hints>
   </connection>
@@ -3340,11 +3608,11 @@ offset:</string>
    <hints>
     <hint type="sourcelabel">
      <x>706</x>
-     <y>962</y>
+     <y>548</y>
     </hint>
     <hint type="destinationlabel">
      <x>706</x>
-     <y>1057</y>
+     <y>643</y>
     </hint>
    </hints>
   </connection>
@@ -3356,11 +3624,11 @@ offset:</string>
    <hints>
     <hint type="sourcelabel">
      <x>942</x>
-     <y>962</y>
+     <y>548</y>
     </hint>
     <hint type="destinationlabel">
      <x>942</x>
-     <y>993</y>
+     <y>579</y>
     </hint>
    </hints>
   </connection>
@@ -3372,11 +3640,11 @@ offset:</string>
    <hints>
     <hint type="sourcelabel">
      <x>942</x>
-     <y>962</y>
+     <y>548</y>
     </hint>
     <hint type="destinationlabel">
      <x>942</x>
-     <y>1025</y>
+     <y>611</y>
     </hint>
    </hints>
   </connection>
@@ -3388,11 +3656,11 @@ offset:</string>
    <hints>
     <hint type="sourcelabel">
      <x>942</x>
-     <y>962</y>
+     <y>548</y>
     </hint>
     <hint type="destinationlabel">
      <x>942</x>
-     <y>1057</y>
+     <y>643</y>
     </hint>
    </hints>
   </connection>
